--- a/surgal.html
+++ b/surgal.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> 
+  <meta name="google-site-verification" content="HUsVX9Bk_E9n3gGEjr2yHc61s2NXOIkopG02KQG_Bg8" />
   <meta name="google-site-verification" content="HUsVX9Bk_E9n3gGEjr2yHc61s2NXOIkopG02KQG_Bg8" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -824,3 +825,4 @@
     </script>
 </body>
 </html>
+
